CREATE DOMAIN money_amount AS BIGINT CHECK (VALUE >= 0);

COMMENT ON DOMAIN money_amount IS 'Kwota przechowywana w groszach (1 PLN = 100 groszy)';

CREATE TABLE
    clients (
        client_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
        -- Email zweryfikowany przez Firebase Authentication
        email VARCHAR(255) NOT NULL UNIQUE,
        -- Unikalny identyfikator użytkownika nadany przez Firebase Authentication
        firebase_uid VARCHAR(255) NOT NULL UNIQUE,
        first_name VARCHAR(100) NOT NULL,
        last_name VARCHAR(100) NOT NULL,
        -- ACTIVE | BLOCKED
        status VARCHAR(50) NOT NULL DEFAULT 'ACTIVE',
        created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
        updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP
    );

CREATE TABLE
    wallets (
        client_id INTEGER PRIMARY KEY,
        balance money_amount NOT NULL DEFAULT 0,
        -- ACTIVE | BLOCKED | CLOSED
        status VARCHAR(50) NOT NULL DEFAULT 'ACTIVE',
        updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
        FOREIGN KEY (client_id) REFERENCES clients (client_id)
    );

CREATE TABLE
    wallet_top_ups (
        top_up_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
        client_id INTEGER NOT NULL,
        amount money_amount NOT NULL CHECK (amount > 0),
        created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
        FOREIGN KEY (client_id) REFERENCES wallets (client_id)
    );

CREATE TABLE
    printing_points (
        printing_point_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
        name VARCHAR(255) NOT NULL,
        street_address VARCHAR(255) NOT NULL,
        city VARCHAR(100) NOT NULL,
        postal_code VARCHAR(20) NOT NULL,
        country VARCHAR(100) NOT NULL,
        -- Maksymalna liczba zamówień możliwych do przyjęcia w ciągu godziny
        hourly_order_limit INTEGER NOT NULL CHECK (hourly_order_limit >= 1)
    );

CREATE TABLE
    opening_hours (
        printing_point_id INTEGER NOT NULL,
        -- 1 = poniedziałek, 7 = niedziela
        day_of_week INTEGER NOT NULL CHECK (day_of_week BETWEEN 1 AND 7),
        start_time TIME NOT NULL,
        end_time TIME NOT NULL,
        PRIMARY KEY (printing_point_id, day_of_week),
        FOREIGN KEY (printing_point_id) REFERENCES printing_points (printing_point_id)
    );

CREATE TABLE
    operators (
        operator_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
        printing_point_id INTEGER NOT NULL,
        -- Unikalny identyfikator operatora nadany przez Firebase Authentication
        firebase_uid VARCHAR(255) NOT NULL UNIQUE,
        -- Email zweryfikowany przez Firebase Authentication
        email VARCHAR(255) NOT NULL UNIQUE,
        -- Unikalny identyfikator pracownika nadawany przez organizację lub punkt druku
        employee_number VARCHAR(100) NOT NULL UNIQUE,
        -- EMPLOYEE - odbieranie i realizacja zamówień
        -- ADMIN    - dodatkowo zarządzanie konfiguracją punktu druku
        role VARCHAR(50) NOT NULL,
        -- ACTIVE | BLOCKED
        status VARCHAR(50) NOT NULL DEFAULT 'ACTIVE',
        created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
        updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
        FOREIGN KEY (printing_point_id) REFERENCES printing_points (printing_point_id)
    );

CREATE TABLE
    rate_sheets (
        printing_point_id INTEGER NOT NULL,
        -- np. standardowy | błyszczący | matowy | kredowy
        paper_type VARCHAR(50) NOT NULL,
        -- np. A3 | A4 | A5
        format VARCHAR(50) NOT NULL,
        page_price money_amount NOT NULL CHECK (page_price > 0),
        PRIMARY KEY (printing_point_id, paper_type, format),
        FOREIGN KEY (printing_point_id) REFERENCES printing_points (printing_point_id)
    );

CREATE TABLE
    extra_pricing (
        printing_point_id INTEGER PRIMARY KEY,
        binding_price money_amount NOT NULL DEFAULT 0,
        stapling_price money_amount NOT NULL DEFAULT 0,
        cover_price money_amount NOT NULL DEFAULT 0,
        FOREIGN KEY (printing_point_id) REFERENCES printing_points (printing_point_id)
    );

CREATE TABLE
    orders (
        order_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
        printing_point_id INTEGER NOT NULL,
        client_id INTEGER NOT NULL,
        -- Ścieżka do pliku w magazynie plików (Google Cloud Storage)
        file_path TEXT NOT NULL,
        -- Liczba stron wykryta w przesłanym pliku
        page_count INTEGER NOT NULL CHECK (page_count > 0),
        -- Cena zamrożona na moment ostatniej aktualizacji zamówienia przez klienta
        total_price money_amount NOT NULL,
        -- Termin odbioru wybrany przez klienta
        pickup_at TIMESTAMPTZ NOT NULL,
        -- PENDING | APPROVED | READY | DISPENSED | CANCELLED
        status VARCHAR(50) NOT NULL DEFAULT 'PENDING',
        created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
        updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
        FOREIGN KEY (printing_point_id) REFERENCES printing_points (printing_point_id),
        FOREIGN KEY (client_id) REFERENCES clients (client_id)
    );

CREATE TABLE
    print_settings (
        order_id INTEGER PRIMARY KEY,
        -- np. A3 | A4 | A5
        format VARCHAR(50) NOT NULL,
        -- np. standardowy | błyszczący | matowy | kredowy
        paper_type VARCHAR(50) NOT NULL,
        -- COLOR | GRAYSCALE
        color_mode VARCHAR(50) NOT NULL,
        -- SINGLE_SIDED | DOUBLE_SIDED
        duplex VARCHAR(50) NOT NULL,
        -- PORTRAIT | LANDSCAPE
        orientation VARCHAR(50) NOT NULL,
        -- NONE | BINDING | STAPLING | COVER
        finishing VARCHAR(50) NOT NULL,
        copies INTEGER NOT NULL CHECK (copies >= 1),
        FOREIGN KEY (order_id) REFERENCES orders (order_id)
    );

CREATE TABLE
    printouts (
        order_id INTEGER PRIMARY KEY,
        operator_id INTEGER NOT NULL,
        -- Data rozpoczęcia realizacji wydruku
        printed_at TIMESTAMPTZ NOT NULL,
        FOREIGN KEY (order_id) REFERENCES orders (order_id),
        FOREIGN KEY (operator_id) REFERENCES operators (operator_id)
    );